Getting, teams, leagues, creating users and groups all working.
